refactor: remove lakehouseId from mirrored catalog APIs and align repository with PostgreSQL native query pattern
Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>